2004-05-06  Ilja Booij  <ilja@ic-s.nl>

	* header.c (read_header): changed some trace formats to have
	the right format (e.g. %zd for size_t etc)

	* imaputil.c (stridx): return type is now size_t. It used to
	be unsigned. The prototype already had size_t as return type, 
	but by mistake it wasn't changed in the definition.

2004-05-04  Aaron Stone  <aaron@serendipity.cx>

	* pipe.c (store_message_temp): the ring buffer now only looks
	for \n.\r\n, as some messages are in an "\n-only" format.
	* lmtp.c: changed a debugging message from TRACE_ERROR
	to TRACE_DEBUG.

2004-05-03  Aaron Stone  <aaron@serendipity.cx>

	* pipe.c (store_message_temp): added a small ring buffer to
	keep track of when a message-terminating \r\n.\r\n sequence
	arrives.

2004-04-28  Ilja Booij  <ilja@ic-s.nl>

	* auth/authsql.c (auth_adduser): no longer creates the mailbox
	for the new user.

	* user.c (do_add): calls db_createmailbox() to create mailbox
	for the new user.

2004-04-28  Aaron Stone  <aaron@serendipity.cx>

	* header.c (read_header): switched from fread to fgetc.
	* pipe.c (store_message_temp): switched from fread to fgetc.
	* main.c (print_usage): added two spaces to line up the columns.

2004-04-23  Aaron Stone  <aaron@serendipity.cx>

	* dsn.c/dsn.h (dsn_tostring): added new function dsn_tostring,
	which take a delivery_status_t argument and returns corresponding
	text for the class, subject and detail codes.
	* header.c (read_header): switched from fgets to fread.
	* pipe.c (store_message_temp): switched from fgets to fread.

2004-04-22  Ilja Booij  <ilja@ic-s.nl>

	* auth/authsql.c (auth_adduser): now adds the current timestamp
	in the last_login field of the users table if a user is added.

2004-04-21  Ilja Booij  <ilja@ic-s.nl>

	* imap4.c (IMAPClientHandler): changed i to size_t

	* imaputil.c (stridx): changed return type to size_t

	* imapcommands.c (_ic_authenticate): no checks return value of
	fgets.

	* header.c (read_header): added some my_free statements for